--- a/index.html
+++ b/index.html
@@ -13,11 +13,71 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-
-
-
-
+  <!-- Complex Grid Layout -->
+  <section class="container">
+    <div class="row g-5">
+      <div class="col-lg-6">
+        <div class="img-card">
+          <div class="big-img mb-5">
+            <img src="./image/img.png" alt="Image" class="img-fluid">
+          </div>
+          <div class="card rounded-0 border-0 shadow-sm mb-3">
+            <div class="row g-0">
+              <div class="col-md-6">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+              <div class="col-md-6 bottom-img">
+                <img src="./image/img.png" class="img-fluid" alt="...">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="card-img">
+          <div class="card rounded-0 border-0 shadow-sm mb-3">
+            <div class="row g-0">
+              <div class="col-md-12">
+                <div class="col-md-12">
+                  <img src="./image/img.png" class="img-fluid" alt="...">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="single-img mt-5">
+            <img src="./image/img.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="card-img">
+          <div class="single-img mb-5">
+            <img src="./image/img.png" alt="Image" class="img-fluid">
+          </div>
+          <div class="card rounded-0 border-0 shadow-sm mb-3">
+            <div class="row g-0">
+              <div class="col-md-12">
+                <div class="col-md-12">
+                  <img src="./image/img.png" class="img-fluid" alt="...">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- Bootstrap 5 JS CDN -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
